# cpa-templates

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  templates.json  templates.schema.json
.github/workflows/: ci-extensions.yml  ci-integrity.yml  ci-profiles.yml  ci-templates.yml  smoke-test.yml  test-combinations.yml
ci/profiles/: celery-default.json  cli-default.json  django-default.json  fastapi-ai-chat-default.json  fastapi-ai-chat-guardrails.json  fastapi-default.json  fastapi-devcontainer.json  fastapi-typed-default.json  mlops-sklearn-default.json  mlops-sklearn-github-actions.json  uv-workspace-default.json  uv-workspace-devcontainer.json
docs/: AI_ML_AUTHORING.md  ARCHITECTURE.md  AUTHORING.md  FUTURE_TEMPLATES.md  MAINTENANCE_CI.md  MAINTENANCE_DEPENDENCIES.md  MAINTENANCE_RELEASE.md  MAINTENANCE_RUNBOOK.md  MAINTENANCE_SECURITY.md  MAINTENANCE_TEMPLATES.md  MLOPS_CONTRACT.md  TEMPLATE_QUALITY_M1.md  TESTING.md
extensions/all-devcontainer/: README.md
extensions/all-mlops-github-actions/: README.md
extensions/all-postgres/: README.md
extensions/all-postgres/template/: .env.example.append
extensions/all-pre-commit/: README.md
extensions/all-pre-commit/template/: .pre-commit-config.yaml  pyproject.toml
extensions/celery-docker/: README.md
extensions/celery-docker/template/: .dockerignore  Dockerfile  compose.prod.yml  compose.yml
extensions/django-docker/: README.md
extensions/django-docker/template/: Dockerfile  compose.prod.yml  compose.yml
extensions/fastapi-ai-chat/: README.md
extensions/fastapi-ai-chat/template/: .env.example.append
extensions/fastapi-ai-guardrails/: README.md
extensions/fastapi-auth-jwt/: README.md
extensions/fastapi-auth-jwt/template/: .env.example.append  pyproject.toml
extensions/fastapi-docker/: README.md
extensions/fastapi-docker/template/: Dockerfile  compose.yml
extensions/fastapi-opentelemetry/: README.md
extensions/fastapi-redis/: README.md
extensions/fastapi-sentry/: README.md
extensions/fastapi-sqlalchemy/: README.md
extensions/github-setup/: README.md
extensions/python-auth-jwt/: README.md
extensions/python-devcontainer/: README.md
extensions/python-docker/: README.md  compose.prod.yml
extensions/python-postgres/: .env.example.append  README.md  pyproject.toml
extensions/python-redis/: README.md
extensions/python-sentry/: README.md
extensions/python-sqlalchemy/: README.md
scripts/ci/: generate-matrix.py  registry.py  run-scaffold-check.py  validate-registry.py
templates/celery-worker/: .env.example.template  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  cpa.config.json  pyproject.toml
templates/celery-worker/docs/: CONFIGURATION.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  TYPING.md
templates/celery-worker/tests/: conftest.py  test_tasks.py
templates/celery-worker/worker/: celery_app.py  config.py.template  tasks.py
templates/celery-worker/worker/tasks/: __init__.py  health.py  math.py
templates/cli-starter/: .env.example  AGENTS.md  CONTRIBUTING.md  README.md  cpa.config.json  pyproject.toml.template
templates/cli-starter/cli_app/: __init__.py  (+3 more)
templates/django-api/: .env.example.template  .gitignore  AGENTS.md  CONTRIBUTING.md  QUALITY.md  README.md  cpa.config.json  manage.py  pyproject.toml
templates/django-api/api/: urls.py  urls_ping.py  views.py
templates/django-api/apps/health/: serializers.py  services.py  urls.py  views.py
templates/django-api/config/: settings.py.template  urls.py
templates/django-api/docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  TYPING.md
templates/django-api/docs/examples/feature-app/: README.md  apps.py  serializers.py  services.py  urls.py  views.py
templates/django-api/tests/: test_health.py.template
templates/fastapi-starter/: .env.example  .env.example.template  AGENTS.md  CONTRIBUTING.md  QUALITY.md  README.md  cpa.config.json  pyproject.toml
templates/fastapi-starter/app/: main.py  main.py.template
templates/fastapi-starter/app/api/v1/: health.py  router.py
templates/fastapi-starter/app/core/: config.py  config.py.template  exception_handlers.py  logging_config.py  middleware.py
templates/fastapi-starter/app/features/_feature_template_/: __init__.py  router.py  service.py
templates/fastapi-starter/app/features/health/: router.py
templates/fastapi-starter/app/schemas/common/: responses.py
templates/fastapi-starter/docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  TYPING.md
templates/fastapi-starter/tests/: test_health.py  test_health.py.template
templates/fastapi-typed-starter/: .gitignore  README.md  cpa.config.json  pyproject.toml
templates/mlops-sklearn-starter/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  cpa.config.json  pyproject.toml
templates/mlops-sklearn-starter/configs/: default.yaml
templates/mlops-sklearn-starter/docs/: CONFIGURATION.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  TYPING.md
templates/mlops-sklearn-starter/mlops_sklearn/: __init__.py  config.py
templates/mlops-sklearn-starter/mlops_sklearn/serving/: __init__.py  predict.py
templates/mlops-sklearn-starter/mlops_sklearn/steps/: __init__.py  base.py  evaluate.py  load_synthetic.py  train_classifier.py
templates/mlops-sklearn-starter/mlops_sklearn/training/: train.py
templates/mlops-sklearn-starter/tests/: test_config.py  test_pipeline.py  test_predict.py
templates/mlops-sklearn-starter/tests/fixtures/: sample_predict.csv
templates/uv-workspace-starter/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md.template  Makefile  README.md.template  cpa.config.json  pyproject.toml
(+134 files in other folders)
