[project]
name = "celery-worker"
version = "0.1.0"
description = "Celery worker starter scaffolded with create-awesome-python-app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.12.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["worker", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.12"
files = ["worker", "tests"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "kombu", "kombu.*"]
ignore_missing_imports = true
