[project]
name = "django-api"
version = "0.1.0"
description = "Django API starter scaffolded with create-awesome-python-app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1.0",
  "djangorestframework>=3.15.0",
  "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
  "django-stubs>=5.1.0",
  "djangorestframework-stubs>=3.15.0",
  "mypy>=1.12.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "pytest-django>=4.9.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "api"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["api", "config", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.12"
files = ["api", "config", "tests"]
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "config.settings"
