[project]
name = "fastapi-starter"
version = "0.1.0"
description = "FastAPI API starter scaffolded with create-awesome-python-app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.12.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false

[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]
warn_return_any = true
warn_unused_configs = true
