[project]
name = "mlops-sklearn-starter"
version = "0.1.0"
description = "CPU-first sklearn MLOps starter scaffolded with create-awesome-python-app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mlflow>=2.18.0",
  "numpy>=2.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
  "mypy>=1.12.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
mlops-train = "mlops_sklearn.training.train:main"
mlops-predict = "mlops_sklearn.serving.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlops_sklearn"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["mlops_sklearn", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.mypy]
python_version = "3.12"
files = ["mlops_sklearn", "tests"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "mlflow.*",
  "mlflow.sklearn",
]
ignore_missing_imports = true
